--- a/index.css
+++ b/index.css
@@ -167,17 +167,34 @@ h1 {
   opacity: 1
 }
 
-section#artiststatement {
-  max-width: 45em;
-}
-
-@media screen and (min-width: 45em) {
-  /* justify when it's large enough to look okay */
-  section#artiststatement {
-    text-align: justify
-  }
-}
-
 .pieceTitle {
   font-weight: 700;
+}
+
+.textContainer {
+  max-width: 1200px;
+  margin: auto;
+}
+
+.bodyLayout {
+  display: flex;
+  flex-direction: row;
+}
+
+.artistStatement {
+  flex-shrink: 1;
+  flex-grow: 1;
+  margin-right: 4em;
+}
+
+.loanTerms {
+  flex-basis: 400px;
+  flex-shrink: 0;
+  flex-grow: 0;
+}
+
+@media screen and (max-width: 864px) {
+  .bodyLayout {
+    display: block;
+  }
 }
