--- a/index.css
+++ b/index.css
@@ -191,6 +191,20 @@ h1 {
   flex-basis: 400px;
   flex-shrink: 0;
   flex-grow: 0;
+  font-size: 12px;
+}
+
+.loanTerms b {
+  color: #bb0000;
+  font-weight: inherit;
+}
+
+.loanTermHeading {
+  font-family: pragmatica-extended, Arial, sans-serif;
+  font-weight: 700;
+  font-style: normal;
+  text-transform: uppercase;
+  font-size: 90%;
 }
 
 @media screen and (max-width: 864px) {
