--- a/src/index.css
+++ b/src/index.css
@@ -34,6 +34,7 @@ section {
 }
 
 section#aboveFold {
+  height: 0; /* hack for IE11 */
   min-height: 100vh;
   display: flex;
   flex-direction: column;
