--- a/src/index.css
+++ b/src/index.css
@@ -50,6 +50,11 @@ section#aboveFold {
   color: white;
 }
 
+/* FOUT. Important to not start animation until fonts are loaded. */
+.wf-loading #selector, .wf-loading h1 {
+  display: none;
+}
+
 .selectorContainer {
   flex-grow: 1;
   flex-shrink: 1;
@@ -70,30 +75,56 @@ section#aboveFold {
 }
 
 #selector {
-  width: 100%;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: center;
 }
 
 #selector > * {
   flex-shrink: 1;
-  display: inline-block;
   flex-basis: 88px;
   padding: 11px;
-  margin-right: 11px;
+  margin-bottom: 11px;
 
   transition: opacity 100ms ease;
 }
 
+#selector > a {
+  color: white;
+  text-decoration: none;
+  font-family: pragmatica-extended, Arial, sans-serif;
+  font-weight: 700;
+  font-style: normal;
+  /* scales font between 12px and 2 ems depending on screen size */
+  font-size: calc(12px + (32 - 12) * ((100vw - 300px) / (1600 - 300)));
+
+  text-transform: uppercase;
+}
+
+.videoHidden #selector > * {
+  height: 66px;
+  margin-bottom: 22px;
+}
+
+.videoVisible #selector {
+  flex-direction: row;
+}
+
 .videoVisible #selector > * {
   flex-basis: 44px;
+  margin-right: 11px;
+}
+
+.videoVisible .linkTitle {
+  display: none;
 }
 
 #selector img {
   max-width: 100%;
   max-height: 100%;
   transition: all 100ms ease;
+
+  vertical-align: middle;
 }
 
 .videoVisible #selector a, #selector:hover a {
